@@ -78,6 +78,7 @@
  - [DS-261] Community Admin JSPUI: porting of the DS-228 patch
  - [DS-271] Make the OAI DC crosswalk configurable
  - [DS-260] Template item some times has owningCollection filled and some times not
+ - [DS-309] Shiboleth default roles are applied also to anonymous user and user logged-in with other methods
 
 (Tim Donohue)
  - [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI
